--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,10 @@
               <a class="nav-link" href="dados.html">Área de Funcionários</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="agendamento.html">Agendamento</a>
+              <!-- Adicionando link para agendamento -->
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contato">Contato</a>
             </li>
           </ul>
